--- a/index.html
+++ b/index.html
@@ -12,43 +12,37 @@
 	<title>Work 8</title>
 </head>
 <body>
+
 	
-	<header>
-		<div class="header">
-			<div class="left-section">
-				<img class="back-arrow" src="images/icons/arrow-left-lined.png" alt="Return">
-				<div class="all-templates">All templates</div>
-				<img class="computer" src="images/icons/computer-thin.png" alt="PC View">
-				<img class="tablet" src="images/icons/tablet-1.png" alt="Tablet view">
-				<img class="mobile" src="images/icons/mobile-thin.png" alt="Mobile view">
+	<nav>
+		<div class="navbar">
+			<div class="navbar-left">
+				<div class="fips">Fips</div>
 			</div>
-			<div class="right-section">
-				<img class="checkmark" src="images/icons/check-mark-circle-filled.png">
-				<div class="no-credit-card">No credit card required</div>
-				<button class="start-building-button">START BUILDING</button>
+			<div class="navbar-right">
+				<ul class-="navbar-options"></ul>
+					<li><u>Home</u></li>
+					<li>Store</li>
+					<li>Customer Care</li>
+					<li>Contacts</li>
+					<li><img class="shopping-bag" src="images/icons/shopping-bag-2.png">Shopping bag (0)</li>
 			</div>
 		</div>
-	</header>
+	</nav>
+	
+	<main>
+		<h1>You deserve a comfortable life</h1>
+		<p class="slogan">We have made quality our habit. It's not something that we just strive for - we live by <br>this principle every day.</p>
+		<button class="our-store-button">Our Store</button>
+	</main>
 
-	<div class="navbar">
-		<div class="navbar-left">
-			Fips
+	<section>
+		<div class="furniture-grid">
+			<img class="aesthetic-image" src="images/chair-1.jpg" alt="chair1">
+			<img class="aesthetic-image" src="images/pexels-valeriia-miller-3910065.jpg" alt="flowers">
+			<img class="aesthetic-image" src="images/images.jfif" alt="chair2">
 		</div>
-		<div class="navbar-right">
-			<ul class-="navbar-options"></ul>
-				<li>Home</li>
-				<li>Store</li>
-				<li>Customer Care</li>
-				<li>Contacts</li>
-				<li><img class="shopping-bag" src="images/icons/shopping-bag-2.png">Shopping bag (0)</li>
-		</div>
-	</div>
-
-
-
-
-
-
+	</section>
 
 
 
