--- a/work7.html
+++ b/work7.html
@@ -14,25 +14,25 @@
       <div class="column1">#</div>
       <div class="column2">First</div>
       <div class="column3">Last</div>
-      <div class="column3">Handle</div>
+      <div class="column4">Handle</div>
     </div>
-    <div class="tablerow">
+    <div class="tablerow odd-row">
       <div class="column1">1</div>
       <div class="column2">Mark</div>
       <div class="column3">Otto</div>
-      <div class="column3">@mdo</div>
+      <div class="column4">@mdo</div>
     </div>
     <div class="tablerow">
       <div class="column1">2</div>
       <div class="column2">Jacob</div>
       <div class="column3">Thornton</div>
-      <div class="column3">@fat</div>
+      <div class="column4">@fat</div>
     </div>
-    <div class="tablerow">
+    <div class="tablerow odd-row">
       <div class="column1">3</div>
       <div class="column2">Larry the Bird</div>
       <div class="column3"> </div>
-      <div class="column3">@twitter</div>
+      <div class="column4">@twitter</div>
     </div>
   
   </div>
