work7 commit columns
made changes to css columns and classes to make more reusable

--- a/work7.html
+++ b/work7.html
@@ -11,28 +11,28 @@
   
   <div class="div-table">
     <div class="headingrow">
-      <div class="column1">#</div>
-      <div class="column2">First</div>
-      <div class="column3">Last</div>
-      <div class="column4">Handle</div>
+      <div class="column  col-bold col20">#</div>
+      <div class="column col30">First</div>
+      <div class="column col50">Last</div>
+      <div class="column col50">Handle</div>
     </div>
     <div class="tablerow odd-row">
-      <div class="column1">1</div>
-      <div class="column2">Mark</div>
-      <div class="column3">Otto</div>
-      <div class="column4">@mdo</div>
+      <div class="column  col-bold col20">1</div>
+      <div class="column col30">Mark</div>
+      <div class="column col50">Otto</div>
+      <div class="column col50">@mdo</div>
     </div>
     <div class="tablerow">
-      <div class="column1">2</div>
-      <div class="column2">Jacob</div>
-      <div class="column3">Thornton</div>
-      <div class="column4">@fat</div>
+      <div class="column  col-bold col20">2</div>
+      <div class="column col30">Jacob</div>
+      <div class="column col50">Thornton</div>
+      <div class="column col50">@fat</div>
     </div>
     <div class="tablerow odd-row">
-      <div class="column1">3</div>
-      <div class="column2">Larry the Bird</div>
-      <div class="column3"> </div>
-      <div class="column4">@twitter</div>
+      <div class="column col-bold col20">3</div>
+      <div class="column col30">Larry the Bird</div>
+      <div class="column col50"> </div>
+      <div class="column col50">@twitter</div>
     </div>
   
   </div>
