--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-	
+<main>
 	<nav>
 		<div class="navbar">
 			<div class="navbar-left">
@@ -30,17 +30,24 @@
 		</div>
 	</nav>
 	
-	<main>
+	<section>
 		<h1>You deserve a comfortable life</h1>
 		<p class="slogan">We have made quality our habit. It's not something that we just strive for - we live by <br>this principle every day.</p>
 		<button class="our-store-button">Our Store</button>
-	</main>
+	</section>
 
 	<section>
 		<div class="furniture-grid">
-			<img class="aesthetic-image" src="images/chair-1.jpg" alt="chair1">
-			<img class="aesthetic-image" src="images/pexels-valeriia-miller-3910065.jpg" alt="flowers">
-			<img class="aesthetic-image" src="images/images.jfif" alt="chair2">
+			<div>
+				<img class="aesthetic-image" src="images/chair-1.jpg" alt="chair1">
+			</div>
+			<div>
+				<img class="aesthetic-image" src="images/pexels-valeriia-miller-3910065.jpg" alt="flowers">
+			</div>
+			<div>
+				<img class="aesthetic-image" src="images/chair-2.jpg" alt="chair2">
+			</div>
+		
 		</div>
 	</section>
 
@@ -58,6 +65,6 @@
 
 
 
-
+	</main>	
 </body>
 </html>
