Fixed first pictures grid layout to position pictures at top and bottom of container
added on temporary background colors in order to view containers more clearly

--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
 	<section>
 		<div class="furniture-grid">
 			<div>
-				<img class="aesthetic-image" src="images/chair-1.jpg" alt="chair1">
+				<img class="aesthetic-image chairs" src="images/chair-1.jpg" alt="chair1">
 			</div>
 			<div>
-				<img class="aesthetic-image" src="images/pexels-valeriia-miller-3910065.jpg" alt="flowers">
+				<img class="aesthetic-image flowers" src="images/pexels-valeriia-miller-3910065.jpg" alt="flowers">
 			</div>
 			<div>
-				<img class="aesthetic-image" src="images/chair-2.jpg" alt="chair2">
+				<img class="aesthetic-image chairs" src="images/chair-2.jpg" alt="chair2">
 			</div>
-		
 		</div>
 	</section>
 
