Finished pages 2, 3 and contact form
Working on footer, added all elements and need to style it

--- a/index.html
+++ b/index.html
@@ -16,28 +16,30 @@
 <main>
 	<nav>
 		<div class="navbar">
-			<div class="navbar-left">
+			<div class="navbar-left alignment-nav">
 				<div class="fips">Fips</div>
 			</div>
-			<div class="navbar-right">
-				<ul class-="navbar-options"></ul>
+			<div class="navbar-right alignment-nav">
+				<ul>
 					<li><u>Home</u></li>
 					<li>Store</li>
 					<li>Customer Care</li>
 					<li>Contacts</li>
-					<li><img class="shopping-bag" src="images/icons/shopping-bag-2.png">Shopping bag (0)</li>
+					<li><img class="shopping-bag alignment-nav" src="images/icons/shopping-bag-2.png">Shopping bag (0)</li>
+				
+				</ul>
 			</div>
 		</div>
 	</nav>
 	
 	<section>
 		<h1>You deserve a comfortable life</h1>
-		<p class="slogan">We have made quality our habit. It's not something that we just strive for - we live by <br>this principle every day.</p>
-		<button class="our-store-button">Our Store</button>
+		<p class="small-text spacing">We have made quality our habit. It's not something that we just strive for - we live by <br>this principle every day.</p>
+		<button class="buttons">Our Store</button>
 	</section>
 
 	<section>
-		<div class="furniture-grid">
+		<div class="furniture-grid grid-display">
 			<div>
 				<img class="aesthetic-image chairs" src="images/chair-1.jpg" alt="chair1">
 			</div>
@@ -50,7 +52,117 @@
 		</div>
 	</section>
 
+	<section>
+		<div class="who-we-are-grid grid-display two-col">
+			<div class="info">
+				<p class="small-text">WHO WE ARE</p>
+				<p class="quotes">It's not just<br>
+					furniture - it's<br>
+					our passion</p>
+			</div>
+			<div class="info">
+				<p class="small-text about-us">We have made quality our habit. It’s not something that<br>
+					we just strive for – we live by this principle every day.<br><br>
+					While most of the things about the creative process will<br>
+					be forgotten, the excellence of our products and<br>
+					services will be remembered.</p>
+			</div>
+		</div>
+	</section>
 
+	<section>
+		<div class="credo-grid grid-display two-col">
+			<div class="info">
+				<p class="small-text">OUR CREDO</p>
+				<p class="quotes credo">Comfort<br>
+					Beauty<br>
+					Versatility</p>
+				<p class="small-text">We have made quality our habit. It's not something that<br>
+					we just strive for – we live by this principle every day.</p>
+			</div>
+			<div>
+				<img class="plant-on-desk" src="images/plants-for-offices-main-image.png" alt="Plants on desk">
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div>
+			<div>
+				<p class="quotes">Instagram Feed</p>
+			</div>
+			<div class="ig-pics-row spacing">
+				<img class="ig-pic" src="images/ff9d0804113d04a0e3bfc1f195dd2d7a.jpg" alt="Chairs">
+				<img class="ig-pic" src="images/room.jpg" alt="bedroom">
+				<img class="ig-pic" src="images/wood.jpg" alt="Wooden Furniture">
+				<img class="ig-pic" src="images/alma-sideboard-oak-cane-1655291407.jpg" alt="more furniture">
+			</div>
+			<div>
+				<button class="buttons">Follow Us</button>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="contact-grid grid-display two-col">
+			<div class="info">
+				<p class="quotes question-margin">Have a question?</p>
+				<p class="small-text">Leave your e-mail and we will contact you soon.</p>
+			</div>
+			<div class="contact-form">
+				<form>
+					<div>
+						<label for="first">Name*</label><br>
+						<input type="text" id="first" name="firstname" class="input-box box-design" placeholder="Your name">
+					</div>
+					<div>	
+						<label for="last">Last name</label><br>
+						<input type="text" id="last" name="lastname" class="input-box box-design" placeholder="Your last name">
+					</div>
+					<div>
+						<label for="comments">Comments*</label><br>
+						<textarea id="comments" class="box-design" rows="5" cols="55" placeholder="Enter your message"></textarea>
+					</div>
+					<div>
+						<button class="buttons">Contact me</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<img class="flower-footer" src="images/stock-photo-panoramic-view-flowerpot-towels-hygiene.jpeg" alt="flower footer">
+	</section>
+
+	<footer>
+		<div class="footer">
+			<div class="left-section">
+				<h2>Address</h2>
+				<p>3721 Single Street</p>
+				<p>Quincy, MA 02169</p>
+				<img class="icons" src="images/icons/twitter-1.png" alt="Twitter">
+				<img class="facebook" src="images/icons/facebook-6.png" alt="Facebook">
+				<img class="ig" src="images/icons/instagram-11.png" alt="Instagram">
+			</div>
+			<div class="middle-section">
+				<h2>Contacts</h2>
+				<p>123-456-7890</p>
+				<p>info@fips.com</p>
+			</div>
+			<div class="right-section">
+				<h2>Subscribe to our newsletter</h2>
+				<div>	
+					<label for="email">E-mail address*</label><br>
+					<input type="text" id="email" name="email" class="input-box box-design" placeholder="Your email address">
+				</div>
+				<div>
+					<button class="buttons">Submit</button>
+				</div>
+			</div>
+
+		</div>
+	</footer>
 
 
 
