Attempting to align footer
cannot get alignment for 3 sections.
left-side cannot align icons to left
middle and right sections are stuck on right side of footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles/work8.css">
 	<link rel="stylesheet" href="styles/work8header.css">
+	<link rel="stylesheet" href="styles/work8footer.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -138,44 +139,46 @@
 	<footer>
 		<div class="footer">
 			<div class="left-section">
-				<h2>Address</h2>
-				<p>3721 Single Street</p>
-				<p>Quincy, MA 02169</p>
-				<img class="icons" src="images/icons/twitter-1.png" alt="Twitter">
-				<img class="facebook" src="images/icons/facebook-6.png" alt="Facebook">
-				<img class="ig" src="images/icons/instagram-11.png" alt="Instagram">
+				<div class="heading">
+					<h2>Address</h2>
+				</div>
+				<div class="info-footer">
+					<p>3721 Single Street</p>
+					<p>Quincy, MA 02169</p>
+				</div>
+					<div class="social">
+						<img class="icons" src="images/icons/twitter-1.png" alt="Twitter">
+						<img class="icons" src="images/icons/facebook-6.png" alt="Facebook">
+						<img class="icons" src="images/icons/instagram-11.png" alt="Instagram">
+				</div>
 			</div>
 			<div class="middle-section">
-				<h2>Contacts</h2>
-				<p>123-456-7890</p>
-				<p>info@fips.com</p>
-			</div>
+				<div class="heading">
+					<h2>Contacts</h2>
+				</div>
+				<div class="info-footer">
+					<p>123-456-7890</p>
+					<p>info@fips.com</p>
+				</div>
 			<div class="right-section">
-				<h2>Subscribe to our newsletter</h2>
-				<div>	
-					<label for="email">E-mail address*</label><br>
-					<input type="text" id="email" name="email" class="input-box box-design" placeholder="Your email address">
+				<div class="heading">
+					<h2>Subscribe to our newsletter</h2>
 				</div>
-				<div>
-					<button class="buttons">Submit</button>
+				<div class="subscribe-form">
+					<form>
+						<div class="info-footer">	
+							<label for="email">E-mail address*</label><br>
+							<input type="text" id="email" name="email" class="input-box box-design sub-label" placeholder="Your email address">
+						</div>
+						<div>
+							<button class="buttons sub-but">Submit</button>
+						</div>
+					</form>
 				</div>
 			</div>
-
 		</div>
 	</footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-	</main>	
+	
+</main>	
 </body>
 </html>
