Working on work 8 section 1
completed header, need to fix font sizing on next sections and work on aligning pictures

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 	<link rel="stylesheet" href="styles/work8header.css">
 	<link rel="stylesheet" href="styles/work8footer.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-	<title>Work 8</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+	<title>Work 8-2</title>
 </head>
 <body>
 
-<main>
+<!-- <main>
 	<nav>
 		<div class="navbar">
 			<div class="navbar-left alignment-nav">
@@ -27,7 +30,6 @@
 					<li>Customer Care</li>
 					<li>Contacts</li>
 					<li><img class="shopping-bag alignment-nav" src="images/icons/shopping-bag-2.png">Shopping bag (0)</li>
-				
 				</ul>
 			</div>
 		</div>
@@ -178,7 +180,78 @@
 			</div>
 		</div>
 	</footer>
+</main>	 -->
+
 	
-</main>	
+	<nav class="header header-alignment bottom-border">
+		<div class="navbar header-alignment">
+			<div class="fips">Fips</div>
+			<div class="menu-items header-alignment">
+				<div class="content"><u>Home</u></div>
+				<div class="content">Store</div>
+				<div class="content">Customer care</div>
+				<div class="content">Contacts</div>
+				<div class="content"><img id="shopping-bag" src="images/icons/shopping-bag-2.png" alt="Shopping Bag">Shopping Bag (0)</div>
+			</div>
+		</div>
+	</nav>
+
+	<main class="center">
+		<section>
+			<h3>You deserve a comfortable life</h3>
+			<div>
+				We have made quality our habit. It’s not something that we just strive for – we live by <br> this principle every day. 
+			</div>
+			<div>
+				<button class="buttons">Our Store</button>
+			</div>
+		</section>
+
+
+	<p>as</p>
+	<p>as</p>
+
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+	<p>as</p>
+
+
+
+		
+
+	</main>
+
 </body>
 </html>
