centered header for section 1
added spacing and formatting for  header as well as fixed font

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 	</nav>
 
 	<main class="center">
-		<section>
-			<h3>You deserve a comfortable life</h3>
-			<div>
+		<section class="section-1 div-items-center">
+			<h1>You deserve a comfortable life</h1>
+			<div class="spacing ">
 				We have made quality our habit. It’s not something that we just strive for – we live by <br> this principle every day. 
 			</div>
 			<div>
