Completed first section div pictures
added center width 100% and fixed picture alignment,
changed photos

--- a/index.html
+++ b/index.html
@@ -196,56 +196,41 @@
 		</div>
 	</nav>
 
-	<main class="center">
+	<main class="center-div">
 		<section class="section-1 div-items-center">
 			<h1>You deserve a comfortable life</h1>
-			<div class="spacing ">
+			<p class="spacing">
 				We have made quality our habit. It’s not something that we just strive for – we live by <br> this principle every day. 
-			</div>
+			</p>
 			<div>
-				<button class="buttons">Our Store</button>
+				<button class="buttons margin-bottom-buttons">Our Store</button>
+			</div>
+			<div class="pictures-row-1 margin-center">
+				<div class="column picture-margin"><img class="aesthetic-images" src="images/agata-create-unsplash-AQEzqWqnVaS3eKx5.avif" alt="Chair 1"></div>
+				<div class="column"><img class="aesthetic-images" src="images/daniil-silantev-unsplash-YleXlbbvg6U9PDB9.avif" alt="chair 2"></div>
+				<div class="column picture-margin"><img class="aesthetic-images align-bottom" src="images/jean-philippe-delberghe-PVQnaFyePvU-unsplash-mnl08bgoeeHyRV0W.avif" alt="table 1"></div>
 			</div>
 		</section>
 
+		
 
-	<p>as</p>
-	<p>as</p>
-
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
-	<p>as</p>
+		<section>
+			<div>
+				<div>
+					<p class="quotes">Instagram Feed</p>
+				</div>
+				<div class="ig-pics-row spacing">
+					<img class="ig-pic" src="images/ff9d0804113d04a0e3bfc1f195dd2d7a.jpg" alt="Chairs">
+					<img class="ig-pic" src="images/room.jpg" alt="bedroom">
+					<img class="ig-pic" src="images/wood.jpg" alt="Wooden Furniture">
+					<img class="ig-pic" src="images/alma-sideboard-oak-cane-1655291407.jpg" alt="more furniture">
+				</div>
+				<div>
+					<button class="buttons">Follow Us</button>
+				</div>
+			</div>
+		</section>
+	
 
 
 
