added paragraphs for about us
wrote paragraphs

--- a/index.html
+++ b/index.html
@@ -212,7 +212,12 @@
 			</div>
 		</section>
 
-		
+		<section>
+			<div>
+				<p>WHO WE ARE</p>
+				<P>It's not just furniture - it's our passion</P>
+			</div>
+		</section>
 
 		<section>
 			<div>
@@ -231,6 +236,7 @@
 			</div>
 		</section>
 	
+
 
 
 
