completed sections 2 ,3 and 4
will need to check formatting and alignment
work on question section and footer

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 	</nav>
 
 	<main class="center-div">
-		<section class="section-1 div-items-center">
+		<section class="section-1 div-items-center div-width">
 			<h1>You deserve a comfortable life</h1>
 			<p class="spacing">
 				We have made quality our habit. It’s not something that we just strive for – we live by <br> this principle every day. 
@@ -205,22 +205,41 @@
 			<div>
 				<button class="buttons margin-bottom-buttons">Our Store</button>
 			</div>
-			<div class="pictures-row-1 margin-center">
-				<div class="column picture-margin"><img class="aesthetic-images" src="images/agata-create-unsplash-AQEzqWqnVaS3eKx5.avif" alt="Chair 1"></div>
-				<div class="column"><img class="aesthetic-images" src="images/daniil-silantev-unsplash-YleXlbbvg6U9PDB9.avif" alt="chair 2"></div>
+			<div class="div-row margin-center">
+				<div class="column picture-margin picture-gap"><img class="aesthetic-images" src="images/agata-create-unsplash-AQEzqWqnVaS3eKx5.avif" alt="Chair 1"></div>
+				<div class="column picture-gap"><img class="aesthetic-images" src="images/daniil-silantev-unsplash-YleXlbbvg6U9PDB9.avif" alt="chair 2"></div>
 				<div class="column picture-margin"><img class="aesthetic-images align-bottom" src="images/jean-philippe-delberghe-PVQnaFyePvU-unsplash-mnl08bgoeeHyRV0W.avif" alt="table 1"></div>
 			</div>
 		</section>
 
-		<section>
-			<div>
-				<p>WHO WE ARE</p>
-				<P>It's not just furniture - it's our passion</P>
+		<section class="section2">
+			<div class="div-row about-us-div col-pad-left">
+				<div class="column about-us-left">
+					<p>WHO WE ARE</p>
+					<h3>It's not just furniture - it's our passion</h3>
+				</div>
+				<div class="column p-width about-us-right">
+					<p class="p-width p-pad">We have made quality our habit. It’s not something that we just strive for – we live by this principle every day. <br><br>
+						While most of the things about the creative process will be forgotten, the excellence of our products and services will be remembered.</p>
+				</div>
 			</div>
 		</section>
 
 		<section>
-			<div>
+			<div class="div-row about-us-div col-pad-left">
+				<div class="column about-us-left section-padding-top">
+					<p>OUR CREDO</p>
+					<h3>Comfort<br>Beauty<br>Versatility</h3>
+					<p class="p-width">We have made quality our habit. It's not something that we just strive for - we live by this principle every day.</p>
+				</div>
+				<div class="column about-us-right">
+					<img class="desk-plant-image" src="images/pexels-element-digital-m2WybgeZovtEvZ9K.avif" alt="Desk">
+				</div>
+			</div>
+		</section>
+	
+		<section>
+			<div class="ig-feed">
 				<div>
 					<p class="quotes">Instagram Feed</p>
 				</div>
