Store page added about us section and cards
need to add in drop menu and menu bar

--- a/index9.html
+++ b/index9.html
@@ -48,14 +48,14 @@
 
     <div class="spacing"></div>
     
-    <section id="who-we-are" class="small-section">
+    <section class="small-section about-us">
         <div>
             <h4>who we are</h4>
             <h1>It's not just furniture - it's our passion</h1>
         </div>
         <p>
             We have made quality our habit. It’s not something that we just strive for – we live by this principle every day. <br><br>
-                While most of the things about the creative process will be forgotten, the excellence of our products and services will be remembered.
+                While most of the things about the creative process will be forgotten, the excellence of our products and <br>services will be remembered.
         </p>
     </section>
     
