used flexbox to fix product cards
stickied navbar to top of page

--- a/index9.html
+++ b/index9.html
@@ -15,18 +15,18 @@
 </head>
 <body>
     
-    <div id="menu_shadow">
-        <section id="header">
+    <section id="menu_shadow">
+        <div id="header">
             <img id="logo" src="images/logo-black-mxB0QG5WNWCDekL1.svg" alt="logo">
             <ul id="menu" >
-                <li class="selected padding-right">Home</li>
-                <li class="padding-right">Store</li>
+                <li class="selected padding-right"><a href=index9.html>Home</a></li>
+                <li class="padding-right"><a href=store-page.html>Store</a></li>
                 <li class="padding-right">Customer Care</li>
                 <li class="padding-right">Contacts</li>
                 <li><img src="images/icons/shopping-bag-2.png" alt="bag-icon">Shopping Bag (0)</li>
             </ul>
-        </section>
-    </div>
+        </div>
+    </section>
     
     <section id="main-title">
         <h1>You deserve a comfortable life</h1>
